# diet_bot

./: .gitignore  pyproject.toml
diet_bot/: bot.py
